fixed high contrast for dropdown menu

--- a/css/alto-contraste.css
+++ b/css/alto-contraste.css
@@ -191,8 +191,7 @@
     .alto-contraste .register__info input::placeholder{
         color: var(--color-black);
     }
-    .alto-contraste #specialty, 
-    .alto-contraste #skill, 
+    .alto-contraste #category, 
     .alto-contraste .select::after{
         background-color: var(--contrast-white);
         color: var(--color-black);
@@ -200,11 +199,4 @@
     .alto-contraste .select:hover::after{
         color: var(--color-orange);
     }
-/* _____________ */
-
-/* ajustes especificos confirmation register */
-.alto-contraste .select{
-    background-color: var(--contrast-white);
-    color: var(--color-black);
-}
 /* _____________ */
